Add vue-charts with default dummy data to charts branch

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "chart.js": "^2.7.2",
+    "hchs-vue-charts": "^1.2.8",
     "hoek": "^5.0.3",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.4.0",
+    "vue-google-charts": "^0.3.1",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vue-visible": "^1.0.2",
