--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.5.2",
     "vue-chartjs": "^3.4.0",
     "vue-google-charts": "^0.3.1",
+    "vue-json-csv": "^1.1.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
     "vue-visible": "^1.0.2",
