--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "hoek": "^5.0.3",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
+    "url-parse": "^1.4.3",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.4.0",
     "vue-google-charts": "^0.3.1",
